--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-    "python.formatting.provider": "autopep8"
+    "python.formatting.provider": "autopep8",
+    "cSpell.words": [
+        "blit",
+        "cronometro",
+        "Folclore",
+        "FOLCLORICAS",
+        "GUERRAS",
+        "KEYDOWN",
+        "MOUSEBUTTONDOWN",
+        "OPÇÕES",
+        "pygame",
+        "SAIR",
+        "spritecollide"
+    ]
 }
