feat: minion with collision

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "blit",
         "cronometro",
+        "dokill",
         "Folclore",
         "FOLCLORICAS",
         "GUERRAS",
