refact: personagens simplificados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "blit",
         "CABECA",
         "cabeça",
+        "colorkey",
         "cronometro",
         "CUCA",
         "CURUPIRA",
