feat: esboço do character

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "cronometro",
         "CUCA",
         "CURUPIRA",
+        "debuffs",
         "dokill",
         "Folclore",
         "FOLCLORICAS",
