--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.formatting.provider": "autopep8",
     "cSpell.words": [
+        "Baiocco",
         "blit",
         "CABECA",
         "cabeça",
